--- a/media/media.html
+++ b/media/media.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>菜鸟教程(runoob.com)</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
+<title>媒体查询实例</title>
 <style>
 * {
   box-sizing: border-box;
@@ -16,8 +17,7 @@ body {
  
 /* 头部标题 */
 .header {
-  padding: 30px;
-  text-align: center;
+  padding: 10px;
   background: white;
 }
  
@@ -92,7 +92,7 @@ body {
 }
  
 /* 响应式布局 - 屏幕尺寸小于 800px 时，两列布局改为上下布局 */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1200px) {
   .leftcolumn, .rightcolumn {   
     width: 100%;
     padding: 0;
@@ -100,7 +100,7 @@ body {
 }
  
 /* 响应式布局 -屏幕尺寸小于 400px 时，导航等布局改为上下布局 */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 1200px) {
   .topnav a {
     float: none;
     width: 100%;
@@ -111,21 +111,21 @@ body {
 <body>
 
 <div class="header">
-  <h1>我的网页</h1>
-  <p>重置浏览器大小查看效果。</p>
+  <h3>宋斌的网络日志</h3>
+  <!-- <p>重置浏览器大小查看效果。</p> -->
 </div>
 
 <div class="topnav">
-  <a href="#">链接</a>
-  <a href="#">链接</a>
-  <a href="#">链接</a>
-  <a href="#" style="float:right">链接</a>
+  <a href="#">Linux</a>
+  <a href="#">Html</a>
+  <a href="#">PHP</a>
+  <a href="#" style="float:right">CSS</a>
 </div>
 
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <h2>文章标题</h2>
+      <h2>文章标题1</h2>
       <h5>2019 年 4 月 17日</h5>
       <div class="fakeimg" style="height:200px;">图片</div>
       <p>一些文本...</p>
@@ -159,7 +159,7 @@ body {
 </div>
 
 <div class="footer">
-  <h2>底部区域</h2>
+  <h2>Power by jdztao.com.</h2>
 </div>
 
 </body>
