--- a/media/media.html
+++ b/media/media.html
@@ -92,7 +92,7 @@ body {
 }
  
 /* 响应式布局 - 屏幕尺寸小于 800px 时，两列布局改为上下布局 */
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 800px) {
   .leftcolumn, .rightcolumn {   
     width: 100%;
     padding: 0;
@@ -100,7 +100,7 @@ body {
 }
  
 /* 响应式布局 -屏幕尺寸小于 400px 时，导航等布局改为上下布局 */
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 400px) {
   .topnav a {
     float: none;
     width: 100%;
@@ -112,14 +112,14 @@ body {
 
 <div class="header">
   <h3>宋斌的网络日志</h3>
-  <!-- <p>重置浏览器大小查看效果。</p> -->
+  <p>重置浏览器大小查看效果。</p>
 </div>
 
 <div class="topnav">
   <a href="#">Linux</a>
   <a href="#">Html</a>
   <a href="#">PHP</a>
-  <a href="#" style="float:right">CSS</a>
+  <a href="#">CSS</a>
 </div>
 
 <div class="row">
