--- a/media/media.html
+++ b/media/media.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,minimum-scale=1.0,user-scalable=0" />
-<title>媒体查询实例</title>
+<title>媒体查询</title>
 <style>
 * {
   box-sizing: border-box;
@@ -123,6 +123,7 @@ body {
 </div>
 
 <div class="row">
+
   <div class="leftcolumn">
     <div class="card">
       <h2>文章标题1</h2>
@@ -139,6 +140,7 @@ body {
       <p>菜鸟教程 - 学的不仅是技术，更是梦想！菜鸟教程 - 学的不仅是技术，更是梦想！菜鸟教程 - 学的不仅是技术，更是梦想！菜鸟教程 - 学的不仅是技术，更是梦想！</p>
     </div>
   </div>
+
   <div class="rightcolumn">
     <div class="card">
       <h2>关于我</h2>
@@ -156,10 +158,11 @@ body {
       <p>一些文本...</p>
     </div>
   </div>
+  
 </div>
 
 <div class="footer">
-  <h2>Power by jdztao.com.</h2>
+  <p>Power by jdztao.com.</p>
 </div>
 
 </body>
