--- a/agreement/order.html
+++ b/agreement/order.html
@@ -8,12 +8,12 @@
   box-sizing: border-box;
 }
 body{
-	padding: 80px;
+	/*padding: 30px;*/
 	font-size: 1em;
 }
 header{
 	text-align: center;
-	padding: 20px
+	/*padding: 20px*/
 }
 
 table{
@@ -47,7 +47,7 @@ article{
 </style>
 </head>
 <body>
-<header><h1>订货协议</h1></header>
+<header><h2>订货协议</h2></header>
 
 <table>
 <tr><td>甲方：</td><td>乙方：</td></tr>
