--- a/table/table.html
+++ b/table/table.html
@@ -2,35 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8"> 
-<title>菜鸟教程(runoob.com)</title>
-<style>
-#customers
-{
-	font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
-	width:100%;
-	border-collapse:collapse;
-}
-#customers td, #customers th 
-{
-	font-size:1em;
-	border:1px solid #98bf21;
-	padding:3px 7px 2px 7px;
-}
-#customers th 
-{
-	font-size:1.1em;
-	text-align:left;
-	padding-top:5px;
-	padding-bottom:4px;
-	background-color:#A7C942;
-	color:#ffffff;
-}
-#customers tr.alt td 
-{
-	color:#000000;
-	background-color:#EAF2D3;
-}
-</style>
+<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+<title>css table 1</title>
+<link rel="stylesheet" type="text/css" href="../default.css">
+<link rel="stylesheet" type="text/css" href="table.css">
+
 </head>
 
 <body>
