--- a/columns/columns.html
+++ b/columns/columns.html
@@ -44,9 +44,9 @@
 			<div class="dropdown">
 			<span>≡</span>  
 			<div class="dropdown-content">
-				<a href="#">商品管理</a>
-				<a href="#">查询统计</a>
-				<a href="#">数据维护</a>
+				  <a href="#">Home</a>
+				  <a href="#">Document</a>
+				  <a href="#">Wiki</a>
 			</div>
 			</div> 
 
@@ -55,10 +55,10 @@
 	<!-- 导航栏代码 -->
 
 	<nav>
-	  <a href="#">Linux</a>
-	  <a href="#">Html</a>
-	  <a href="#">PHP</a>
-	  <a href="#">CSS</a>
+	  <a href="#">Home</a>
+	  <a href="#">Document</a>
+	  <a href="#">Wiki</a>
+	  <a href="#" style="float: right;">About</a>
 	</nav>
 
  <hr>
@@ -66,6 +66,10 @@
 
 <article>
 	<!-- 分栏代码 -->
+	<section>
+	<h4>标题</h4>
+	<p>文章内容</p>	
+	</section>
 
 	<aside>
 	<h4>分类</h4>	
@@ -77,10 +81,6 @@
 	</ul>
 	</aside>
 
-	<section>
-	<h4>标题</h4>
-	<p>文章内容</p>	
-	</section>
 	
 </article>
 
