--- a/flex/flex.html
+++ b/flex/flex.html
@@ -8,7 +8,7 @@
 </head>
 
 <body class="HolyGrail">
-  <header>header</header>
+  <header> <embed width="100%" height="500px" src="/home/sb/html/nav/topnav.html"> </header>
   <div class="HolyGrail-body">
     <main class="HolyGrail-content">main</main>
     <nav class="HolyGrail-nav">nav</nav>
