--- a/lightform/lightform.html
+++ b/lightform/lightform.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="lightform.css">
+	<link rel="stylesheet" type="text/css" href="../default.css">
+  <link rel="stylesheet" type="text/css" href="lightform.css">
 	<title>Document</title>
 </head>
 <body>
@@ -23,5 +24,6 @@
   
     <input type="submit" value="Submit">
   </form>	
+
 </body>
 </html>
