--- a/image/imgbrowse.html
+++ b/image/imgbrowse.html
@@ -20,7 +20,6 @@ div.img img {
 
 div.desc {
     padding: 15px;
-    text-align: center;
 }
 
 * {
@@ -89,8 +88,8 @@ div.desc {
   <div class="img">
     <a target="_blank" href="img_mountains.jpg">
       <img src="1.jpg" alt="Mountains" width="600" height="600">
-    </a>
-    <div class="desc">Add a description of the image here</div>
+    
+    <div class="desc">Add a description of the image here</div></a>
   </div>
 </div>
 
